--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -36,7 +36,7 @@
                     <a href="#">Забыли пароль?</a> | <a href="{% url "users:registration" %}"> Регистрация</a>
                      <a href="{% provider_login_url 'google' %}">
                         <button class="btn btn-google">
-                            <img src="https://playtht-website-assets.s3.amazonaws.com/img/brand/google.svg" alt="Google logo"/>Sign up with Google
+                            <img src="{% static 'jmg/gogle.png' %}" alt="Google-logo"/>Sign up with Google
                         </button>
                     </a>
                 </div>
